trying to get this to work

--- a/.github/workflows/validateUrls.yml
+++ b/.github/workflows/validateUrls.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Checks
       run: |
         gem install awesome_bot
-        awesome_bot --skip-save-results --allow-redirect --allow-ssl --allow-redirect --allow 202,403 -f .\README.md
+        awesome_bot --skip-save-results --allow-redirect --allow-ssl --allow-redirect --allow 202,403 -f README.md
