--- a/.github/workflows/validateUrls.yml
+++ b/.github/workflows/validateUrls.yml
@@ -9,6 +9,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  schedule:
+    - cron: '17 3 15 3,9,12 *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
